# x-market-watch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/x_market_watch/: __init__.py  cli.py  formatter.py  history.py  llm.py  models.py  oauth1.py  pipeline.py  settings.py  state.py  telegram.py  web.py  x_client.py
tests/: test_formatter.py
